--- a/PCVK_Modul2.ipynb
+++ b/PCVK_Modul2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCVK-Modul2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM0v+WiG/3FCEIoCxEAoy1D",
+      "authorship_tag": "ABX9TyO2v4olKc/vVC6Fng/YIhfN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -727,6 +727,43 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Pertanyaan**\n",
+        "\n",
+        "\n",
+        "\n",
+        "1. Apakah perbedaan gambar yang ditampilkan tanpa dan dengan matplotlib? \n",
+        "\n",
+        "Jawaban: Jika gambar ditampilkan menggunakan matplotlib maka juga akan menampilkan gambar grafik yang terdapat satu sumbu atau lebih. Setiap sumbu memiliki sumbu horizontal (x) dan sumbu vertikal (y).\n",
+        "\n",
+        "2. Apakah perbedaan dan pengaruhnya pembuatan black image antara tipe data int16 dan int32?\n",
+        "\n",
+        "Jawaban:Hasil ukuran file image yang dihasilkan berbeda. Hal tersebut dapat mempengaruhi tingkat intensitas dari suatu image.\n",
+        "3. Jelaskan tentang angka-angka yang terdapat pada image.png \n",
+        "\n",
+        "Jawaban: untuk menjaga array asli tetap utuh dengan menambahkan dimensi ke-3 ke array. Dimensi ketiga ini berisi detail untuk warna yaitu RGB. Nilai -1 untuk red, 1 untuk green, dan 2 untuk blue.\n",
+        "4. Apakah kegunaan “google.colab.patches import cv2_imshow” pada potongan kode berikut \n",
+        "\n",
+        "Jawaban:digunakan untuk menggantikan fungsi cv2.imshow() yang memerlukan patch atau perbaikan untuk menampilkan gambar pada OpenCV.\n",
+        "5. Apakah kegunaan “skimage impot io” pada potongan kode soal nomor 4 \n",
+        "\n",
+        "Jawaban: kegunaan skimage adalah untuk pemrosesan gambar yang menerapkan algoritma dan utilitas"
+      ],
+      "metadata": {
+        "id": "iacSUYGYU0ex"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Tugas**"
+      ],
+      "metadata": {
+        "id": "3Eb_1b0GVgLS"
+      }
     },
     {
       "cell_type": "code",
